# nexus

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  frontend_todolist.md
app/: .env.example  .fingerprintignore  CLAUDE.md  README.md  app.json  eas.json  package.json  (+1 more)
backend/: .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  test_db.py  test_msg.py
backend/alembic/: env.py
backend/alembic/versions/: 142f7b873a39_init.py  604b2cea5d51_add_documents_table.py  6e98a6481736_add_sessions_messages.py  940d2366780e_init.py  c7d3f8a1b2e4_add_user_uid_phone_wechat.py  e8a1d2c3f4b5_add_auth_identities.py
backend/src/: main.py
backend/src/api/v1/: __init__.py  auth.py  chat.py  documents.py  health.py  models.py  sessions.py  users.py
backend/src/application/: auth_service.py  chat_service.py  document_service.py  email_service.py  note_prompts.py  research_agent.py  session_service.py
backend/src/domain/models/: __init__.py  auth_identity.py  base.py  document.py  message.py  refresh_token.py  session.py  user.py
backend/src/domain/schemas/: auth.py  chat.py  common.py  document.py  user.py
backend/src/infra/: config.py  database.py  logging.py  minio_client.py  redis.py  security.py
backend/src/infra/llm/: __init__.py  base.py  deepseek_provider.py
backend/src/infra/search/: __init__.py  base.py  bocha_provider.py  router.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_note_prompts.py  test_research_agent.py  test_search.py  test_users.py
(+54 files in other folders)
